[package]
name = "archive-tier-search-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[[bin]]
name = "partition"
path = "src/bin/partition.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
chrono = "0.4"
csv = "1"
rand = "0.8"
arrow = "53"
parquet = { version = "53", features = ["arrow"] }
rusqlite = "0.31"
